add setup.py, pytest configurations, and others things

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,14 @@
-  [run]
-  source = rosie
+[paths]
+source = src
+
+[run]
+branch = true
+source =
+    src
+    tests
+parallel = true
+
+[report]
+show_missing = true
+precision = 2
+omit = *migrations*
