--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,11 @@ norecursedirs =
     .env
     dist
     build
+    __pycache__
+    .cache
+
 addopts =
+    --pyargs
     -rxEfsw
     --strict
     --ignore=docs/conf.py
